// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Content banner renders correctly 1`] = `
<jest>
  <div
    class="bcl-content-banner pb-md-4-75 pb-4 pt-4 pt-md-4-75 bg-lighter"
  >
    <div
      class="container"
    >
      <article
        class="bg-transparent border-0 card"
      >
        <div
          class="row"
        >
          <div
            class="col-8 col-md-4 col-lg-3 offset-2 offset-md-0"
          >
            <img
              alt="alt img"
              class="card-img-top rounded-1"
              src="https://picsum.photos/255/255?random=6"
            />
          </div>
          <div
            class="col-md-8 col-lg-9 col-xxl-8"
          >
            <div
              class="card-body pt-4 pt-md-0 px-0 px-md-3 pb-0"
            >
              <h1
                class="fs-1 card-title bcl-heading"
              >
                This is the title of this page
              </h1>
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
              <br />
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              <div
                class="mt-2-5"
              >
                <span
                  class="mb-2 me-2 badge rounded-pill badge-outline-primary"
                >
                  Category 1
                </span>
                <span
                  class="mb-2 badge rounded-pill badge-outline-primary"
                >
                  Category 2
                </span>
              </div>
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Content banner renders correctly with a date block 1`] = `
<jest>
  <div
    class="bcl-content-banner pb-md-4-75 pb-4 pt-4 pt-md-4-75 bg-lighter"
  >
    <div
      class="container"
    >
      <article
        class="bg-transparent border-0 card"
      >
        <div
          class="row"
        >
          <div
            class="col-8 col-md-3 col-lg-2 offset-4 offset-md-0"
          >
            <time
              class="bcl-date-block bg-date rounded mw-date text-center d-flex flex-column ratio ratio-1x1"
              datetime="2021-01-23"
            >
              <span
                class="d-flex flex-column pt-2"
              >
                <span
                  class="d-flex flex-column align-item-center justify-content-center bg-white border border-bottom-0 w-100 h-100 fs-5 text-uppercase"
                >
                  <span
                    class="d-block"
                  >
                    23 Jan
                  </span>
                </span>
                <span
                  class="bg-lighter border w-100 rounded-bottom py-1"
                >
                  2021
                </span>
              </span>
            </time>
          </div>
          <div
            class="col-md-9 col-lg-10 col-xxl-8"
          >
            <div
              class="card-body pt-4 pt-md-0 px-0 px-md-3 pb-0"
            >
              <h1
                class="fs-1 card-title bcl-heading"
              >
                This is the title of this page
              </h1>
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
              <br />
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              <div
                class="mt-2-5"
              >
                <span
                  class="mb-2 me-2 badge rounded-pill badge-outline-primary"
                >
                  Category 1
                </span>
                <span
                  class="mb-2 badge rounded-pill badge-outline-primary"
                >
                  Category 2
                </span>
              </div>
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Content banner with links renders correctly 1`] = `
<jest>
  <div
    class="bcl-content-banner pb-md-4-75 pb-4 pt-4 pt-md-4-75 bg-lighter"
  >
    <div
      class="container"
    >
      <article
        class="bg-transparent border-0 card"
      >
        <div
          class="row"
        >
          <div
            class="col-8 col-md-4 col-lg-3 offset-2 offset-md-0"
          >
            <img
              alt="alt img"
              class="card-img-top rounded-1"
              src="https://picsum.photos/255/255?random=6"
            />
          </div>
          <div
            class="col-md-8 col-lg-9 col-xxl-8"
          >
            <div
              class="card-body pt-4 pt-md-0 px-0 px-md-3 pb-0"
            >
              <h1
                class="fs-1 card-title bcl-heading"
              >
                This is the title of this page
              </h1>
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
              <br />
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              <div
                class="mt-2-5"
              >
                <span
                  class="mb-2 me-2 badge rounded-pill badge-outline-primary"
                >
                  Category 1
                </span>
                <span
                  class="mb-2 badge rounded-pill badge-outline-primary"
                >
                  Category 2
                </span>
              </div>
              <div
                class="mt-2-5 mb-2"
              >
                <div
                  class="mb-3 mb-md-0 d-block d-md-inline-block me-md-4-5"
                >
                  <a
                    href="#"
                  >
                    <svg
                      class="me-2-5 bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#linkedin"
                      />
                    </svg>
                    Linkedin
                  </a>
                </div>
                <div
                  class="mb-3 mb-md-0 d-block d-md-inline-block me-md-4-5"
                >
                  <a
                    href="#"
                  >
                    <svg
                      class="me-2-5 bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#envelope-fill"
                      />
                    </svg>
                    Contact
                  </a>
                </div>
                <div
                  class="mb-3 mb-md-0 d-block d-md-inline-block me-md-4-5"
                >
                  <a
                    href="#"
                  >
                    <svg
                      class="me-2-5 bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#file-arrow-down-fill"
                      />
                    </svg>
                    Download CV
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;
